feat: add a skeleton for the directory
